WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23104
minor mistakes in init functions for animation and transition events
https://bugs.webkit.org/show_bug.cgi?id=23104
Summary
minor mistakes in init functions for animation and transition events
Darin Adler
Reported
2009-01-04 10:27:27 PST
I noticed these functions are ignoring some of their arguments -- they should not.
Attachments
patch
(51.70 KB, patch)
2009-01-04 11:52 PST
,
Darin Adler
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-01-04 11:52:29 PST
Created
attachment 26416
[details]
patch
Anders Carlsson
Comment 2
2009-01-05 09:15:34 PST
Comment on
attachment 26416
[details]
patch r=me
Darin Adler
Comment 3
2009-01-05 09:29:45 PST
http://trac.webkit.org/changeset/39602
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug