WebCore/dom/WebKitAnimationEvent.cpp
@@ -47,17 +47,18 @@ WebKitAnimationEvent::~WebKitAnimationEvent()
 }
 
 void WebKitAnimationEvent::initWebKitAnimationEvent(const AtomicString& type, 
-                                        bool /*canBubbleArg*/,
-                                        bool /*cancelableArg*/,
+                                        bool canBubbleArg,
+                                        bool cancelableArg,
                                         const String& animationName,
                                         double elapsedTime)
 {
     if (dispatched())
         return;
     
-    initEvent(type, false, true);
+    initEvent(type, canBubbleArg, cancelableArg);
     
     m_animationName = animationName;
+    m_elapsedTime = elapsedTime;
 }
 
 const String& WebKitAnimationEvent::animationName() const
