WebCore/dom/WebKitTransitionEvent.cpp
@@ -48,17 +48,18 @@ WebKitTransitionEvent::~WebKitTransitionEvent()
 }
 
 void WebKitTransitionEvent::initWebKitTransitionEvent(const AtomicString& type, 
-                                            bool /*canBubbleArg*/,
-                                            bool /*cancelableArg*/,
+                                            bool canBubbleArg,
+                                            bool cancelableArg,
                                             const String& propertyName,
                                             double elapsedTime)
 {
     if (dispatched())
         return;
     
-    initEvent(type, false, true);
+    initEvent(type, canBubbleArg, cancelableArg);
     
     m_propertyName = propertyName;
+    m_elapsedTime = elapsedTime;
 }
 
 const String& WebKitTransitionEvent::propertyName() const
